# llm-semantic-analysis

./: .gitignore  README.md  procrustes_distances.csv  pyproject.toml
configs/anthropic/: claude-4.5-haiku-high.yaml  claude-4.5-haiku-low.yaml  claude-4.5-haiku-medium.yaml  claude-4.5-haiku-none.yaml  claude-4.5-sonnet-high.yaml  claude-4.5-sonnet-low.yaml  claude-4.5-sonnet-medium.yaml  claude-4.5-sonnet-none.yaml
configs/openai/: gpt-5-high.yaml  gpt-5-low.yaml  gpt-5-medium.yaml  gpt-5-mini-disabled.yaml  gpt-5-mini-high.yaml  gpt-5-mini-low.yaml  gpt-5-mini-medium.yaml  gpt-5-mini-minimal.yaml  gpt-5-minimal.yaml  gpt-5-nano-high.yaml  gpt-5-nano-low.yaml  gpt-5-nano-medium.yaml  gpt-5-nano-minimal.yaml
configs/openrouter/: gemini-2.5-flash-high.yaml  gemini-2.5-flash-lite-high.yaml  gemini-2.5-flash-lite-low.yaml  gemini-2.5-flash-lite-medium.yaml  gemini-2.5-flash-lite-none.yaml  gemini-2.5-flash-low.yaml  gemini-2.5-flash-medium.yaml  gemini-2.5-flash-none.yaml  gemini-2.5-pro-high.yaml  gemini-2.5-pro-low.yaml  gemini-2.5-pro-medium.yaml  gemini-2.5-pro-none.yaml  grok-4-fast-disabled.yaml  grok-4-fast-high.yaml  grok-4-fast-low.yaml  grok-4-fast-medium.yaml  grok-4-fast-none.yaml  polaris-alpha.yaml
prompts/: sample_prompt_corpus.jsonl  seed_prompt_corpus.jsonl
scripts/: analyze_procrustes.py  create_embeddings.py  run_missing_seeds.sh  run_prompts.py
